<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_text">Регистрация</string>
    <string name="name_hint">Введите имя</string>
    <string name="surname_hint">Введите фамилию</string>
    <string name="birth_date_hint">Введите дату рождения</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="name_text">Имя</string>
    <string name="surname_text">Фамилия</string>
    <string name="birth_date_text">Дата рождения</string>
    <string name="password_text">Пароль</string>
    <string name="repeat_password_text">Повторите пароль</string>
    <string name="name_error">Имя должно состоять из более чем 2-ух символов и начинаться с заглавной буквы</string>
    <string name="surname_error">Фамилия должна состоять из более чем 2-ух символов и начинаться с заглавной буквы</string>
    <string name="birth_date_error">Неверная дата рождения</string>
    <string name="password_error">Пароль должен содержать не менее 8 символов. Обязательно наличие цифр, заглавных и строчных букв</string>
    <string name="repeat_password_error">Пароли не совпадают</string>
</resources>